# patch_finder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/patch_finder/: __init__.py  cli.py  config.py  confirm.py  gitmap.py  maloo.py  pipeline.py  report.py  resolve.py  suspects.py  timeline.py
tests/: conftest.py  test_cli.py  test_config.py  test_confirm.py  test_gitmap.py  test_maloo.py  test_pipeline.py  test_report.py  test_resolve.py  test_suspects.py  test_timeline.py
